# orbitlab

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  netlify.toml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/ISSUE_TEMPLATE/: bug_report.md  calculation_request.md  feature_request.md
.github/workflows/: ci.yml
apps/desktop/: README.md  package.json
apps/desktop/docs/: OFFLINE.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/pocketbase/: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pb_schema.json  rules.md  seed.md
apps/pocketbase/docs/: CLOUD-HOST.md  render-blueprint.md
apps/pocketbase/scripts/: download.sh  import-schema.mjs  serve.sh
apps/web/: .env.example  README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/src/: main.tsx  vite-env.d.ts
apps/web/src/app/: App.tsx  di.ts  providers.tsx  router.tsx
apps/web/src/pages/: EditorPage.tsx  HomePage.tsx  SimPage.tsx
apps/web/src/shared/ui/: Button.tsx  (+3 more)
docs/: ARCHITECTURE.md  CI-DESKTOP.md  CLEAN-ARCHITECTURE.md  DEPLOY.md  DESKTOP.md  E2E-MANUAL.md  FEATURE-MATRIX.md  LICENSING.md  MATH.md  PARALLEL-WORK.md  PLAN-16-AGENTS.md  PRODUCT.md  ROADMAP.md  TROUBLESHOOTING-AUTH.md
docs/parallel-smoke/: agent-01.md  agent-02.md  agent-03.md  agent-04.md  agent-05.md  agent-06.md  agent-07.md  agent-08.md  agent-09.md  agent-10.md  agent-11.md  agent-12.md  agent-13.md  agent-14.md  agent-15.md  agent-16.md
(+24 files in other folders)
