[package]
name = "orbitlab-desktop"
version = "0.1.0"
description = "OrbitLab desktop shell (Tauri 2)"
authors = ["OrbitLab contributors"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "orbitlab_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
